[package]
name = "bhpkg"
version = "2.0.0"
edition = "2024"
authors = ["Blackhole OS"]

[profile.release]
opt-level = 3
codegen-units = 1      
panic = "abort"        
strip = true           

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled", "collation"] }
curl = { version = "0.4", default-features = false, features = ["rustls", "static-curl"] }
ureq = "3.3.0"
sha2 = "0.11.0"
rsa = { version = "0.9", features = ["sha2"] }
tar = "0.4.46"
zstd = { version = "0.13", features = ["zstdmt"] }
nix = { version = "0.31.3", features = ["process", "mount", "sched", "user", "fs", "signal"] }
libc = "0.2"
lazy_static = "1.4"
ctrlc = "3.4"
memmap2 = "0.9.4"
seccompiler = "0.5.0"

clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
syscalls = "0.8.1"